generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  ADMIN
}

enum UserStatus {
  ACTIVE
  BLOCKED
  INACTIVE
}

enum ProductType {
  SHIRT
  PANT
  JACKET
}

enum Size {
  S
  M
  L
  XL
}

enum PaymentOption {
  COD
  VNPAY
}

enum PaymentStatus {
  PAID
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
}

model User {
  id           String     @id @default(uuid())
  email        String
  fullName     String
  passwordHash String
  phoneNumber  String
  role         UserRole   @default(CUSTOMER)
  status       UserStatus @default(ACTIVE)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  deletedAt    DateTime?

  refreshSessions     RefreshSession[]
  cart                Cart?
  orders              Order[]
  cancellationRequests OrderCancellationRequest[]

  @@unique([email])
  @@index([role])
  @@index([status])
  @@index([deletedAt])
}

model RefreshSession {
  id               String    @id @default(uuid())
  userId           String
  refreshTokenHash String
  expiresAt        DateTime
  revokedAt        DateTime?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([expiresAt])
  @@index([revokedAt])
}

model Product {
  id          String      @id @default(uuid())
  name        String
  description String
  type        ProductType
  material    String
  price       Decimal     @db.Decimal(12, 2)
  imageUrl    String
  isActive    Boolean     @default(true)
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  deletedAt   DateTime?

  variants   ProductVariant[]
  orderItems OrderItem[]

  @@index([type])
  @@index([isActive])
  @@index([deletedAt])
}

model ProductVariant {
  id        String   @id @default(uuid())
  productId String
  size      Size
  color     String
  stock     Int      @default(0)
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  deletedAt DateTime?

  product    Product     @relation(fields: [productId], references: [id])
  cartItems  CartItem[]
  orderItems OrderItem[]

  @@unique([productId, size, color])
  @@index([productId])
  @@index([size])
  @@index([color])
  @@index([isActive])
  @@index([deletedAt])
}

model Cart {
  id        String   @id @default(uuid())
  userId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user  User       @relation(fields: [userId], references: [id])
  items CartItem[]

  @@unique([userId])
}

model CartItem {
  id        String   @id @default(uuid())
  cartId    String
  variantId String
  quantity  Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  cart    Cart           @relation(fields: [cartId], references: [id])
  variant ProductVariant @relation(fields: [variantId], references: [id])

  @@index([cartId])
  @@index([variantId])
}

model Order {
  id            String        @id @default(uuid())
  userId        String
  status        OrderStatus   @default(PENDING)
  paymentOption PaymentOption
  paymentStatus PaymentStatus @default(PAID)
  shippingName  String
  phone         String
  address       String
  city          String
  note          String
  total         Decimal       @db.Decimal(12, 2)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
  deletedAt     DateTime?

  user                User                      @relation(fields: [userId], references: [id])
  items               OrderItem[]
  cancellationRequest OrderCancellationRequest?

  @@index([userId])
  @@index([status])
  @@index([paymentOption])
  @@index([paymentStatus])
  @@index([deletedAt])
}

model OrderItem {
  id          String   @id @default(uuid())
  orderId     String
  productId   String
  variantId   String
  productName String
  size        Size
  color       String
  unitPrice   Decimal  @db.Decimal(12, 2)
  quantity    Int
  subtotal    Decimal  @db.Decimal(12, 2)
  createdAt   DateTime @default(now())

  order   Order          @relation(fields: [orderId], references: [id])
  product Product        @relation(fields: [productId], references: [id])
  variant ProductVariant @relation(fields: [variantId], references: [id])

  @@index([orderId])
  @@index([productId])
  @@index([variantId])
}

model OrderCancellationRequest {
  id         String    @id @default(uuid())
  orderId    String
  customerId String
  reason     String
  adminNote  String?
  createdAt  DateTime  @default(now())
  resolvedAt DateTime?

  order    Order @relation(fields: [orderId], references: [id])
  customer User  @relation(fields: [customerId], references: [id])

  @@unique([orderId])
  @@index([customerId])
  @@index([resolvedAt])
}
